--- a/ders4_dom/ornek1_selektor/index.html
+++ b/ders4_dom/ornek1_selektor/index.html
@@ -3,12 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SELECTOR</title>
+    <title class="arama">SELECTOR</title>
 </head>
-<body>
+<body id="govde">
     <section>
-<h1 class="H1">DOM Selector</h1>
+<h1 class="h1">DOM Selector</h1>
 <img src="img/logo1.png"class ="bir" alt="naber"/>
+<br>
 <br>
 <img src="img/logo2.png"class ="iki" alt="nasılsın"/>
 <p id="para">JAVASCRIPT COK KOLAY
