--- a/ders4_dom/ornek1_selektor/index.html
+++ b/ders4_dom/ornek1_selektor/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="govde">
     <section>
-<h1 class="h1">DOM Selector</h1>
+<h1 class="H1">DOM Selector</h1>
 <img src="img/logo1.png"class ="bir" alt="naber"/>
 <br>
 <br>
