--- a/ders4_dom/ornek2_domManipule/index.html
+++ b/ders4_dom/ornek2_domManipule/index.html
@@ -32,7 +32,7 @@
                 <input class="checkbox" type="checkbox">
 
             </div>
-
+            <p class="forH1"></p>
             <ul class="liste text-start">
                 <li>Javascript</li>
                 <li>Java</li>
